Atualizações de CSS, SEO e layout

--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -63,7 +63,7 @@
   h1 {
     font-family: var(--font-main);
     color: var(--heading-color);
-    font-size: 1.4em;
+    font-size: 1.3em;
     margin-top: 1.5em;
     margin-bottom: 0.75em;
   }
@@ -79,7 +79,7 @@
   h3 {
     font-family: var(--font-main);
     color: var(--heading-color);
-    font-size: 1.5em;
+    font-size: 1.1em;
     margin-top: 1.1em;
     margin-bottom: 0.5em;
   }
@@ -176,6 +176,7 @@ main > *:first-child {
   footer {
     padding: 25px 0;
     text-align: center;
+    font-size: 0.8em;
   }
 
 /* --- Estilos para o Cabeçalho Principal --- */
@@ -251,8 +252,10 @@ header a.title:hover {     /* <<< SELETOR CORRIGIDO para o hover */
 
   main ul li span { /* Span da Data */
     flex: 0 0 100px;   /* Reserva um espaço fixo de 100px para a data. */
-    text-align: right;  /* Alinha o texto da data à direita */
-    margin-left: 1em;   /* Adiciona um espaço entre o título e a data */
+    text-align: right;
+    margin-left: 1em; 
+    font-size: 0.8em;
+ */
   }
 
   /* --- Media Query para Telas Pequenas (Celulares) --- */
