--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -1,5 +1,6 @@
 {{/* Importa a fonte Literata */}}
-<link href="https://fonts.googleapis.com/css2?family=Literata:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+<link rel="preload" href="https://fonts.googleapis.com/css2?family=Literata:ital,wght@0,400;0,700;1,400&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Literata:ital,wght@0,400;0,700;1,400&display=swap"></noscript>
 
 {{/* Link para Auto-Descoberta do Feed RSS (Adicionado Aqui) */}}
 {{ range .AlternativeOutputFormats -}}
