Adicionado 4 temas de cores

--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -14,4 +14,7 @@
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 <link rel="manifest" href="/site.webmanifest" />
 
+{{/* Link para Flaticon Uicons - TODOS os estilos */}}
+<link href='https://cdn.jsdelivr.net/npm/@flaticon/flaticon-uicons@3.3.1/css/all/all.min.css' rel='stylesheet'>
+
 {{/* Este arquivo pode ser usado no futuro para adicionar outras meta tags, links ou scripts na head */}}
