Adição de quatro paleta de cores

--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -22,7 +22,7 @@
     --background-color: #1a1a1a; /* Seu Ajuste */
     --heading-color: #e5e3e1;    /* Seu Ajuste */
     --text-color: #e5e3e1;       /* Seu Ajuste */
-    --link-color: #d6d5d3;
+    --link-color: #d1d7d7;
     --visited-color: var(--link-color);
     --code-background-color: #1a1a1a;
     --code-color: #cccccc;
@@ -34,7 +34,7 @@
    --background-color: #FFFDF6; /* <<-- Corrigido */
    --heading-color: #626F47;     /* <<-- Corrigido */
    --text-color: #626F47;        /* <<-- Corrigido */
-   --link-color: #A0C878;        /* <<-- Corrigido */
+   --link-color: #A4B465;        /* <<-- Corrigido */
    --visited-color: var(--link-color);
    --code-background-color: #FFFDF6;
    --code-color: #264653;
@@ -63,7 +63,7 @@ html.cake {
     --background-color: #1a1a1a;
     --heading-color: #e5e3e1;
     --text-color: #e5e3e1;
-    --link-color: #d6d5d3;
+    --link-color: #d1d7d7;
     --visited-color: var(--link-color);
     --code-background-color: #1a1a1a;
     --code-color: #cccccc; /* Corrigido de #1a1a1a */
