Ajuste para tema de cereja

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -23,6 +23,6 @@
   <span class="icon-leaf"><i class="fi fi-br-plant-wilt"></i></span>
 
   {{/* Ícone para tema cake (Bolo - usando fi-rr-cake-slice como exemplo) */}}
-  <span class="icon-cake"><i class="fi fi-bs-cupcake"></i></span>
+  <span class="icon-cake"><i class="fi fi-sr-cherry"></i></span>
 
 </button>
