Verificação do Pinterest

--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -60,6 +60,7 @@
 {{/* Link para Flaticon Uicons - TODOS os estilos */}}
 <link href='https://cdn.jsdelivr.net/npm/@flaticon/flaticon-uicons@3.3.1/css/all/all.min.css' rel='stylesheet'>
 
-{{/* Este arquivo pode ser usado no futuro para adicionar outras meta tags, links ou scripts na head */}}
+{{/* Verificação de Domínio do Pinterest */}}
+<meta name="p:domain_verify" content="<meta name="p:domain_verify" content="0153cb2c1305a3ab04046ccd4b65b064"/>"/>
 
 {{/* Este arquivo pode ser usado no futuro para adicionar outras meta tags, links ou scripts na head */}}
